--- a/src/i18n/zh.json
+++ b/src/i18n/zh.json
@@ -14,6 +14,9 @@
     "long": "长",
     "maximum": "最长"
   },
-  "next": "下一步",
-  "restart": "重置"
+  "action":{
+    "next": "下一步",
+    "restart": "重置",
+    "copy": "复制成功"
+  }
 }
